refact err; fix UserContext; timeout
