# cmd/api/docs/swagger.json
@@ -1,10 +1,10 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is the Example API documentation.",
-        "title": "Example API",
+        "description": "This is the \u003capp-name\u003e API documentation.",
+        "title": "\u003capp-name\u003e API",
         "contact": {
-            "name": "UserName",
+            "name": "Owner",
             "email": "user@example.com"
         },
         "version": "1.0"
@@ -35,19 +35,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/dto.Resp"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "type": "object"
-                                        }
-                                    }
-                                }
-                            ]
+                            "$ref": "#/definitions/dto.Resp-any"
                         }
                     }
                 }
@@ -55,14 +43,49 @@
         }
     },
     "definitions": {
-        "dto.Resp": {
+        "dto.Resp-any": {
             "type": "object",
             "properties": {
-                "code": {
+                "data": {},
+                "message": {
+                    "type": "string"
+                },
+                "reason": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.Resp-array_result_User": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/result.User"
+                    }
+                },
+                "message": {
+                    "type": "string"
+                },
+                "reason": {
+                    "type": "string"
+                }
+            }
+        },
+        "result.User": {
+            "type": "object",
+            "properties": {
+                "age": {
                     "type": "integer"
                 },
-                "data": {},
-                "msg": {
+                "birthday": {
+                    "type": "string",
+                    "example": "1987-11-29"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
                     "type": "string"
                 }
             }
